# SilentWave

./: README.md
client/: package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.tsx
client/src/components/: ChatList.tsx  ChatWindow.tsx  FileUpload.tsx  Header.tsx  LoginForm.tsx  MessageBubble.tsx  SignupForm.tsx
client/src/pages/: Chat.tsx  Home.tsx  Login.tsx  Profile.tsx  Signup.tsx
client/src/services/: authService.ts  messageService.ts  userService.ts
client/src/styles/: Home.module.css  globals.css
server/: CMakeLists.txt
server/include/: Auth.hpp  Database.hpp  Messaging.hpp  Server.hpp  WebSocketSession.hpp
server/src/: Auth.cpp  Database.cpp  Messaging.cpp  Server.cpp  WebSocketSession.cpp  main.cpp
